<resources>
    <string name="app_name">ProMind Cleaner</string>
    <string name="title_home">Home</string>
    <string name="rating">Rate</string>
    <string name="policy">PRIVACY POLICY</string>
    <string name="more_app">More App</string>
    <string name="feedback">Feedback</string>
    <string name="scan">Scan</string>
    <string name="setting">Settings</string>
    <string name="scan_wait">Please wait while scanning files...</string>
    <string name="language_setting">Language</string>
    <string-array name="arrLanguage">
        //tieng cs
        <item>Česky</item>
        //de
        <item>Deutsch</item>
        // en
        <item>English</item>
        //es
        <item>Español</item>
        //fr
        <item>Français</item>
        //in
        <item>Indonesia</item>
        // it
        <item>Italiano</item>
        // tieng pl
        <item>Polski</item>
        // pt
        <item>Português</item>

        //nga
        <item>Русский</item>

        <item>Türkçe</item>
        <item>Tiếng Việt</item>

        //A rap
        <item>العربية</item>
        //Thai lan
        <item>ไทย</item>


        //Tieng bengali bn
        <item>বাঙালি</item>


        //Tieng hindi hi
        <item>हिन्दी</item>

        //Tieng tamil ta
        <item>தமிழ்</item>


    </string-array>
    <string name="dat" translatable="false">dat</string>
    <string name="bmp" translatable="false">bmp</string>
    <string name="cache" translatable="false">cache</string>
    <string name="css" translatable="false">css</string>
    <string name="doc" translatable="false">doc</string>
    <string name="docx" translatable="false">docx</string>
    <string name="flac" translatable="false">flac</string>
    <string name="gif" translatable="false">gif</string>
    <string name="html" translatable="false">html</string>
    <string name="jpeg" translatable="false">jpeg</string>
    <string name="jpg" translatable="false">jpg</string>
    <string name="js" translatable="false">js</string>
    <string name="m4a" translatable="false">m4a</string>
    <string name="mkv" translatable="false">mkv</string>
    <string name="mp3" translatable="false">mp3</string>
    <string name="mp4" translatable="false">mp4</string>
    <string name="nomedia" translatable="false">nomedia</string>
    <string name="ogg" translatable="false">ogg</string>
    <string name="pdf" translatable="false">pdf</string>
    <string name="txt" translatable="false">txt</string>
    <string name="vcf" translatable="false">Vcf Files</string>
    <string name="wav" translatable="false">wav</string>
    <string name="webm" translatable="false">webm</string>
    <string name="xlsx" translatable="false">xlsx</string>
    <string name="xml" translatable="false">xml</string>
    <string name="zip" translatable="false">Zip Files</string>
    <string name="_3gp" translatable="false">3gp</string>
    <string name="aac" translatable="false">aac</string>
    <string name="amr" translatable="false">amr</string>
    <string name="apk" translatable="false">Apk Files</string>
    <string name="emptyshow" translatable="false">emptyshow</string>
    <string name="png" translatable="false">png</string>
    <string name="deleted_number_format">Deleted ... %d files</string>
    <string name="show_ads_format">Advertising (%d) - while you wait</string>
    <string name="scan_all_file">Scan All Other Files</string>
    <string name="scan_audio_file">Scan Duplicate Audios</string>
    <string name="scan_doc_file">Scan Duplicate Docs</string>
    <string name="scan_image_file">Scan Duplicate Images</string>
    <string name="scan_video_file">Scan Duplicate Videos</string>
    <string name="analyzing">Analyzing...</string>
    <string name="path" translatable="false">/storage/emulated/0/Yolo.doc</string>
    <string name="_30_kb" translatable="false">30 KB</string>
    <string name="sd_content_1">Please follow below instructions to grant permission to delete selected files.</string>
    <string name="sd_content_2">If you dont see the SD card, try this .</string>
    <string name="sd_title">Confirm External Storage Access</string>
    <string name="no_file_found">No Duplicate Files Found</string>
    <string name="delete_content">Do you want to delete the file?</string>
    <string name="delete_title">Confirm Delete</string>
    <string name="file_removed">Files Removed</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="delete_now">Delete now</string>
    <string name="junk_files">Trash</string>
    <string name="junk">Trash</string>
    <string name="cpu_cooler">Cool </string>
    <string name="phone_booster">Boost </string>
    <string name="antivirus">Antivirus </string>
    <string name="power_saving">Saving</string>
    <string name="data_manager">Data manager</string>
    <string name="smart_charge">Smart charger </string>
    <string name="deep_clean">Duplicate files </string>
    <string name="app_uninstall">Delete apps </string>
    <string name="junk_files_btn">Clean</string>
    <string name="cpu_cooler_btn">Cool </string>
    <string name="phone_booster_btn">Boost </string>
    <string name="antivirus_btn">Scan</string>
    <string name="power_saving_btn">Save</string>
    <string name="smart_charge_btn">Scan</string>
    <string name="notification_manager_btn">Check</string>
    <string name="deep_clean_btn">Clean</string>
    <string name="app_uninstall_btn">Delete</string>
    <string name="facebook_app_id" translatable="false">2867006886946987</string>
    <string name="junk_files_dialog">Exit without cleaning?</string>
    <string name="cpu_cooler_dialog">Exit without cooling?</string>
    <string name="phone_booster_dialog">Exit without boosting?</string>
    <string name="antivirus_dialog">Exit without scanning?</string>
    <string name="power_saving_dialog">Quit without optimizing battery?</string>
    <string name="smart_charge_dialog">Exit without optimizing battery?</string>
    <string name="notification_manager_dialog">Exit without verification?</string>
    <string name="deep_clean_dialog">Exit without cleaning?</string>
    <string name="app_uninstall_dialog">Exit without uninstalling the application?</string>
    <string name="notification_manager">No notifications </string>
    <string name="smart_charge_des">Extend battery life </string>
    <string name="deep_clean_des">Free up more space</string>
    <string name="app_uninstall_des">All apps or selected</string>
    <string name="notification_manager_des">Clear notification bar</string>
    <string name="junk_files_des">Delete unnecessary files</string>
    <string name="cpu_cooler_des">Reduce device temperature</string>
    <string name="phone_booster_des">Increase productivity </string>
    <string name="antivirus_des">Real-time protection</string>
    <string name="power_saving_des">Stop unused applications</string>
    <string name="no_ads_des">Advertising you will have no more trouble</string>
    <string name="premium_shield_des">Protect your apps with Premium Access</string>
    <string name="additional_clean_des">Premium Device Cleaning</string>
    <string name="all_functions_des">Get all new features first</string>
    <string name="additional_speed_des">Speed ​​up your device faster with Premium Access</string>
    <string name="no_ads">No ads</string>
    <string name="premium_shield">Premium security </string>
    <string name="additional_clean">Deeper cleaning</string>
    <string name="all_functions">All features are available</string>
    <string name="additional_speed">More speed</string>
    <string name="percent">%</string>
    <string name="scaning">Scan ......</string>
    <string name="memory_kill_found">Memory taking apps found</string>
    <string name="boost">Boost </string>
    <string name="empty_item_select">You must select at least 1 item</string>
    <string name="sm_edge_device_optimized">Your device is optimized</string>
    <string name="clean">Clean</string>
    <string name="cooling">Cool</string>
    <string name="try_it">Start</string>
    <string name="protect_now">Protect now</string>
    <string name="save_now">Save now</string>
    <string name="further_optimize_cpu">Optimize your CPU</string>
    <string name="cool_down">Cool </string>
    <string name="scaning_cpu">Scanning CPU ...</string>
    <string name="secretly_consuming_battery">Power-consuming apps </string>
    <string name="extend_battery_life">Disable (%s)</string>
    <string name="analyzing_battery_usage">Battery usage analysis</string>
    <string name="hibernation">"Hibernation ....."</string>
    <string name="find_and_grant">Find the %1$s and enable %2$s</string>
    <string name="grant_now">Allow</string>
    <string name="grant_app_permission"></string>
    <string name="accessibility_service_description">Tap on top right use to Accessiblility service.
\n
\nThis will allow Super Cleaner to:
\n
\n- Deep clean hidden junk
\n- Hibernate draining apps
\n
\nYou will have to accept Android system warinings when enabling Accessibility service. Clean master will not use these for any orther purpose than listed here.</string>
    <string name="permission_needed">Need permission</string>
    <string name="on_off">ON OFF</string>
    <string name="skip_app_title">The selected applications will not be eliminated during cleanup</string>
    <string name="app_protect">App is protected</string>
    <string name="notification_created_shortcut">Shortcut for %s created</string>
    <string name="list_game">List of games</string>
    <string name="select_game_to_boost">Select a game to boost</string>
    <string name="smart_charger_can_help">Intelligent charging can help you</string>
    <string name="optimize_chargin_progress">Optimize the charging process</string>
    <string name="remind_charger">Extend battery life </string>
    <string name="turn_on">Turn on now</string>
    <string name="wifi">Wi-Fi</string>
    <string name="on">Turned on</string>
    <string name="brightness">Brightness</string>
    <string name="auto">Auto</string>
    <string name="bluetooth">Bluetooth">Bluetooth</string>
    <string name="off">Turned off</string>
    <string name="synchronize">Synchronized</string>
    <string name="charging_finished">Charging complete</string>
    <string name="auto_optimized">Automatically optimized</string>
    <string name="clean_up">Clean</string>
    <string name="pin">Battery saving</string>
    <string name="power_full">Battery fully charged</string>
    <string name="battery_full_des">Charging over. Please turn off the power source</string>
    <string name="uninstall">Delete </string>
    <string name="clean_notifi">Cleaning of notifications</string>
    <string name="social_app">Social app</string>
    <string name="third_app">Third-party app</string>
    <string name="spam_notification">Notification of spam:</string>
    <string name="no_data">No data</string>
    <string name="just_now_time">Right now</string>
    <string name="minute_ago">%s minutes ago</string>
    <string name="Notificationbar_Spamnotification">Notifications of spam:</string>
    <string name="Notificationbarcleanup_Guide1">Sort notifications of spam and delete them with a click</string>
    <string name="Notificationbarcleanup_RightNow">Clear notification bar</string>
    <string name="safety_scanning">Security scan</string>
    <string name="security">Safety</string>
    <string name="liked_app">Like the app?</string>
    <string name="dontshowagain">Don\'t show again<u /></string>
    <string name="rateplease">Your review is important to us!</string>
    <string name="pro">Buy the PRO version</string>
    <string name="start_14_day_trial">Start 3-day trial</string>
    <string name="free_version_desc">Free Premium trial will run for 3 days, then you will be charged $20/year. Get started now, you can cancel it anytime on Google Play.  <u>Read the terms of use</u></string>
</resources>