<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/rounded_violot"
    android:orientation="vertical"
    android:paddingStart="23dp"
    android:paddingTop="31dp"
    android:paddingEnd="31dp"
    android:paddingBottom="31dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/liked_app"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/rateplease"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:stepSize="1"
        android:theme="@style/RatingBar" />

    <TextView
        android:id="@+id/dontshowagain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/dontshowagain"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>