<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_38sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/on_off"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_onoff"
            style="@style/swguide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_setting_charger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/wifi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tv_status_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/on"
                    android:textColor="@color/color_a8a8a8"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_wifi"
                style="@style/swguide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/brightness"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tv_status_brightness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/auto"
                    android:textColor="@color/color_a8a8a8"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_brightness"
                style="@style/swguide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/bluetooth"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tv_status_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/off"
                    android:textColor="@color/color_a8a8a8"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_bluetooth"
                style="@style/swguide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/synchronize"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tv_status_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/auto"
                    android:textColor="@color/color_a8a8a8"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_synchronized"
                style="@style/swguide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_38sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/charging_finished"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_charging_finish"
            style="@style/swguide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btnApply"
        style="@style/button"
        android:text="@string/smart_charge_btn" />
</LinearLayout>