<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_6sdp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/title_home"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/_8sdp" />
    </LinearLayout>

    <LinearLayout
        android:alpha="0.3"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_222222" />

    <LinearLayout
        android:id="@+id/ll_cleanup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_junk_file" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/clean_up"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/_8sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_boost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_game_booster1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/boost"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/_8sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cooldown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_cpu_cooler" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/cool_down"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/_8sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_power_saving" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/pin"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/_8sdp" />
    </LinearLayout>

</LinearLayout>