<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="8dp"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/imageLayout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:contentDescription="play"
            android:src="@drawable/ic_action_play"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/checked"
        android:layout_toEndOf="@+id/imageLayout"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="4dp"
        android:paddingEnd="5dp"
        android:paddingBottom="4dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/_30_kb"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/path"
            android:textColor="@color/gray"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/checkboxMain" />
</LinearLayout>
